--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
   "description": "WP Sync DB Media File Addon for WP Sync DB",
   "keywords": ["plugin","wordpress","wp-sync-db","media"],
   "require": {
-    "composer/installers": "~1.0.6"
+    "php": ">=5.3.7",
+    "composer/installers": "~1.5"
   }
 }
